--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ defaults:
 jobs:
   unit-tests:
     name: Unit Tests
-    runs-on: macos-15-xlarge  # Apple Silicon runner
+    runs-on: macos-latest
     timeout-minutes: 30
     steps:
       - uses: actions/checkout@v4
