--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,54 +1,46 @@
-name: iOS CI / Run Unit Tests
+name: iOS CI
 
-# Triggers on pull requests to main and pushes to feature branches
 on:
   pull_request:
-    branches: [main]
   push:
-    branches: ['feature/**']
-
-# Auto-cancel redundant workflow runs
-concurrency:
-  group: ci-${{ github.ref }}
-  cancel-in-progress: true
-
-defaults:
-  run:
-    shell: bash
+    branches: [main]
 
 jobs:
-  unit-tests:
-    name: Unit Tests
-    runs-on: macos-latest
+  build-and-test:
+    runs-on: macos-14           # or macos-latest
     timeout-minutes: 30
+
     steps:
-      - uses: actions/checkout@v4
-      
-      # Set up Xcode version
-      - uses: maxim-lobanov/setup-xcode@v4
-        with:
-          xcode-version: '16.4'
-      
-      # Cache dependencies
-      - name: Cache SwiftPM
-        uses: actions/cache@v4
-        with:
-          path: ~/.swiftpm
-          key: spm-${{ runner.os }}-${{ hashFiles('**/Package.resolved') }}
-      
-      # Run tests
-      - name: Run unit tests
-        run: |
-          set -euo pipefail
-          xcodebuild \
-            -scheme "JenTest" \
-            -destination "platform=iOS Simulator,name=iPhone 15,OS=18.0" \
-            -testPlan UnitTests \
-            test | xcpretty && exit ${PIPESTATUS[0]}
-      
-      # Upload logs if tests fail
-      - uses: actions/upload-artifact@v4
-        if: failure()
-        with:
-          name: TestLogs
-          path: ~/Library/Logs/DiagnosticReports/*.crash
+    - uses: actions/checkout@v4
+
+    # Optional: pin exact Xcode (e.g. 16.2)
+    - uses: maxim-lobanov/setup-xcode@v1
+      with:
+        xcode-version: '16.2'
+
+    # Show environment for easier debugging
+    - name: Show Xcode version
+      run: xcodebuild -version
+
+    # Cache DerivedData to speed up subsequent runs
+    - uses: actions/cache@v4
+      with:
+        path: ~/Library/Developer/Xcode/DerivedData
+        key: ${{ runner.os }}-derived-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-derived-
+
+    # Build & run tests on iOS simulator
+    - name: Build and Test
+      run: |
+        xcodebuild \
+          -workspace JenTest.xcworkspace \
+          -scheme JenTest \
+          -destination 'platform=iOS Simulator,name=iPhone 15,OS=17.5' \
+          clean test | xcbeautify
+
+    # Upload the xcresult bundle as an artifact
+    - uses: actions/upload-artifact@v4
+      with:
+        name: TestResults
+        path: ~/Library/Developer/Xcode/DerivedData/**/Logs/Test/*.xcresult
