--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -19,7 +19,7 @@ jobs:
       # 2. Select the Xcode version you want
       - uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: '16.4'  # ⇠ pin or use 'latest-stable'
+          xcode-version: 'latest-stable'
 
       # 3. Build **and** test your default scheme on the simulator
       - name: Build & Run Tests
