--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,7 +18,7 @@ jobs:
       # 2️⃣ Pick the Xcode version you want
       - uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: '16.4'   # or 'latest-stable'
+          xcode-version: 'latest-stable'
 
       # 3️⃣ Figure out a usable simulator destination string
       - name: Detect first available iPhone Simulator
