ADded iphone 16 to the list

--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -28,5 +28,5 @@ jobs:
           xcodebuild \
             -project JenTest.xcodeproj \
             -scheme JenTest \
-            -destination 'platform=iOS Simulator,OS=latest' \
+            -destination 'platform=iOS Simulator,name=iPhone 16' \
             clean test
