--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: iOS CI – build & test
+name: iOS CI — macos-14
 
 on:
   pull_request:
@@ -8,48 +8,29 @@ on:
 
 jobs:
   test:
-    runs-on: macos-14          # Apple-silicon runner (Xcode 16.x)
+    runs-on: macos-14          # Apple-silicon runner
     timeout-minutes: 30
 
     steps:
-      # 1️⃣ Check out the repo
+      # 1. Fetch code
       - uses: actions/checkout@v4
 
-      # 2️⃣ Pick the Xcode version you want
+      # 2. Select an Xcode that still bundles an iOS runtime
       - uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: 'latest-stable'
+          xcode-version: '16.1'   # ⇠ iOS 17.x simulator included
 
-      # 3️⃣ Figure out a usable simulator destination string
-      - name: Detect first available iPhone Simulator
-        id: sim
-        shell: bash
-        run: |
-          set -euo pipefail
-
-          # Grab the newest iOS runtime identifier (e.g. "iOS 17.5")
-          RUNTIME_LINE="$(xcrun simctl list runtimes | grep -E '^iOS ' | head -1)"
-          RUNTIME_VERSION="$(echo "$RUNTIME_LINE" | awk '{print $2}')"          # 17.5
-          RUNTIME_IDENTIFIER="$(echo "$RUNTIME_LINE" | cut -d'[' -f2 | cut -d']' -f1)" # com.apple.CoreSimulator.SimRuntime.iOS-17-5
-
-          # Pick the first device listed under that runtime (e.g. "iPhone 15")
-          DEVICE_NAME="$(xcrun simctl list devices "$RUNTIME_IDENTIFIER" | sed -n 's/^ *\([^()]*[^ ]\) (.*) (Available).*/\1/p' | head -1)"
-
-          DESTINATION="platform=iOS Simulator,name=${DEVICE_NAME},OS=${RUNTIME_VERSION}"
-          echo "Using destination: $DESTINATION"
-          echo "destination=$DESTINATION" >> "$GITHUB_OUTPUT"
-
-      # 4️⃣ Build & run tests
-      - name: Build & Run Tests
+      # 3. Build the app and run all unit tests
+      - name: Build & Test
         run: |
           set -o pipefail
           xcodebuild \
             -project JenTest.xcodeproj \
             -scheme JenTest \
-            -destination "${{ steps.sim.outputs.destination }}" \
+            -destination 'platform=iOS Simulator,name=iPhone 15' \
             clean test
 
-      # 5️⃣ Always save the xcresult bundle so you can open it in Xcode for details
+      # 4. Always keep the xcresult bundle for inspection
       - uses: actions/upload-artifact@v4
         if: always()
         with:
