--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,66 +1,75 @@
-name: iOS CI — macos-14 with auto-runtime
+name: iOS CI — macos-14 (self-provisioned simulator)
 
 on:
   pull_request:
     branches: [ main ]
   push:
-    branches: [ main ]
+    branches:     [ main ]
 
 jobs:
   test:
-    runs-on: macos-14          # Apple-silicon
-    timeout-minutes: 45        # first run needs extra time to download runtime
+    runs-on: macos-14            # Apple-silicon runner
+    timeout-minutes: 45          # first job downloads runtime
 
     steps:
-      # 1. Checkout code
-      - uses: actions/checkout@v4
+    # 1. Checkout
+    - uses: actions/checkout@v4
 
-      # 2. Select Xcode (16.1 still fine on macos-14)
-      - id: xcode
-        uses: maxim-lobanov/setup-xcode@v1
-        with:
-          xcode-version: '16.1'   # change only when *you* decide
+    # 2. Select an Xcode that still supports iOS 17 runtime
+    - id: xcode
+      uses: maxim-lobanov/setup-xcode@v1
+      with:
+        xcode-version: '16.1'    # keep this exact pin on macos-14
 
-      # 3. Restore (or prime) the iOS runtime cache
-      - name: Cache iOS simulator runtime
-        uses: actions/cache@v4
-        with:
-          path: /Library/Developer/CoreSimulator/Profiles/Runtimes
-          key: ${{ runner.os }}-xcode-${{ steps.xcode.outputs.xcode-path }}-ios-runtimes
+    # 3. Cache / restore iOS simulator runtimes
+    - name: Cache iOS runtime
+      uses: actions/cache@v4
+      with:
+        path: /Library/Developer/CoreSimulator/Profiles/Runtimes
+        key: ${{ runner.os }}-xcode-${{ steps.xcode.outputs.xcode-path }}-ios-runtime-v1
 
-      # 4. Install the runtime if the cache was empty
-      - name: Ensure iOS runtime exists
-        run: |
-          if ! xcrun simctl list runtimes | grep -q "iOS"; then
-            echo "No iOS runtime found – downloading..."
-            sudo xcodebuild -downloadPlatform iOS
-          else
-            echo "iOS runtime already present."
-          fi
+    # 4. Ensure an iOS runtime is present (download once, then reuse cache)
+    - name: Install iOS runtime if missing
+      run: |
+        if ! xcrun simctl list runtimes | grep -q "iOS 17"; then
+          echo "▶️  Downloading iOS simulator runtime…"
+          sudo xcodebuild -downloadPlatform iOS            # 10-15 min only first time
+        else
+          echo "✅  iOS runtime already installed."
+        fi
 
-      # 5. List the now-available simulators (debug aid)
-      - name: List simulators
-        run: xcrun simctl list devices --json
+    # 5. Create a fresh simulator for this job
+    - name: Create & boot simulator
+      id: sim
+      run: |
+        set -euo pipefail
+        RUNTIME_ID=$(xcrun simctl list runtimes | grep "iOS 17" | awk -F '[()]' '{print $2}' | head -n1)
+        echo "Using runtime: $RUNTIME_ID"
+        UDID=$(xcrun simctl create "CI-iPhone15" "com.apple.CoreSimulator.SimDeviceType.iPhone-15" "$RUNTIME_ID")
+        echo "udid=$UDID" >> $GITHUB_OUTPUT
+        xcrun simctl boot "$UDID"
+        xcrun simctl bootstatus "$UDID" -b      # wait until fully booted
 
-      # 6. Build & test
-      - name: Build and run unit tests
-        run: |
-          set -eo pipefail
-          # grab the first iPhone simulator UDID
-          UDID=$(xcrun simctl list devices | \
-                 grep -E "iPhone 15 .* (Booted|Shutdown)" | \
-                 head -n1 | \
-                 awk -F '[()]' '{print $2}')
-          echo "Using simulator: $UDID"
-          xcodebuild \
-            -project JenTest.xcodeproj \
-            -scheme JenTest \
-            -destination "id=$UDID" \
-            clean test
+    # 6. Build & test
+    - name: Build and run unit tests
+      run: |
+        set -eo pipefail
+        xcodebuild \
+          -project JenTest.xcodeproj \
+          -scheme JenTest \
+          -destination "id=${{ steps.sim.outputs.udid }}" \
+          clean test | xcbeautify
 
-      # 7. Always save xcresult for post-mortem
-      - uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: XCResult
-          path: ~/Library/Developer/Xcode/DerivedData/**/Logs/Test/*.xcresult
+    # 7. Collect xcresult bundle
+    - uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: XCResult
+        path: ~/Library/Developer/Xcode/DerivedData/**/Logs/Test/*.xcresult
+
+    # 8. Shutdown & delete simulator to keep runner clean
+    - name: Shutdown simulator
+      if: always()
+      run: |
+        xcrun simctl shutdown "${{ steps.sim.outputs.udid }}"
+        xcrun simctl delete  "${{ steps.sim.outputs.udid }}"
