--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,46 +1,34 @@
-name: iOS CI
+name: "Abhijith's iOS CI Runner 😀"
 
 on:
-  pull_request:
   push:
-    branches: [main]
+    branches:
+      - main
+      - 'feature/**'
+  pull_request:
+    branches:
+      - main
+      - 'feature/**'
 
 jobs:
   build-and-test:
-    runs-on: macos-14           # or macos-latest
-    timeout-minutes: 30
+    name: Build and Run Unit Tests
+    runs-on: macos-latest
 
     steps:
-    - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    # Optional: pin exact Xcode (e.g. 16.2)
-    - uses: maxim-lobanov/setup-xcode@v1
-      with:
-        xcode-version: '16.2'
+      - name: Set up Xcode
+        uses: maxim-lobanov/setup-xcode@v4
+        with:
+          xcode-version: 'latest'
 
-    # Show environment for easier debugging
-    - name: Show Xcode version
-      run: xcodebuild -version
-
-    # Cache DerivedData to speed up subsequent runs
-    - uses: actions/cache@v4
-      with:
-        path: ~/Library/Developer/Xcode/DerivedData
-        key: ${{ runner.os }}-derived-${{ github.sha }}
-        restore-keys: |
-          ${{ runner.os }}-derived-
-
-    # Build & run tests on iOS simulator
-    - name: Build and Test
-      run: |
-        xcodebuild \
-          -workspace JenTest.xcworkspace \
-          -scheme JenTest \
-          -destination 'platform=iOS Simulator,name=iPhone 15,OS=17.5' \
-          clean test | xcbeautify
-
-    # Upload the xcresult bundle as an artifact
-    - uses: actions/upload-artifact@v4
-      with:
-        name: TestResults
-        path: ~/Library/Developer/Xcode/DerivedData/**/Logs/Test/*.xcresult
+      - name: Build and test
+        run: |
+          xcodebuild \
+            -project JenTest.xcodeproj \
+            -scheme JenTest \
+            -sdk iphonesimulator \
+            -destination 'platform=iOS Simulator,OS=latest,name=iPhone 14' \
+            clean test
