--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -30,4 +30,4 @@ jobs:
       - name: Build and test
         run: |
           set -o pipefail &&
-          xcodebuild test -scheme JenTest -destination 'platform=iOS Simulator,OS=latest' | xcpretty
+          xcodebuild test -scheme JenTest -destination 'platform=iOS Simulator,name=iPhone 16,OS=18.0' | xcpretty
