--- a/.github/workflows/dude.yml
+++ b/.github/workflows/dude.yml
@@ -62,29 +62,14 @@ jobs:
           WS=$(find "$ROOT" -maxdepth 3 -path "*/.xcodeproj/*" -prune -o -type d -name "*.xcworkspace" -print -quit 2>/dev/null | head -n 1 || true)
           PROJ=$(find "$ROOT" -maxdepth 3 -type d -name "*.xcodeproj" -print -quit 2>/dev/null | head -n 1 || true)
 
-          # Decide destination. Prefer UDID only if xcodebuild sees it for this scheme.
+          # Decide destination. Prefer the booted UDID; if absent, use a generic iOS Simulator destination.
           UDID="${{ steps.sim.outputs.udid }}"
-          DEFAULT_DEST="platform=iOS Simulator,name=${{ env.DEVICE_MODEL }},OS=latest"
+          DEFAULT_DEST="platform=iOS Simulator"
           if [ -n "$UDID" ]; then
-            if [ -n "${WS}" ]; then
-              if xcodebuild -workspace "${WS}" -scheme "$SCHEME" -showdestinations 2>/dev/null | grep -q "$UDID"; then
-                echo "Using booted simulator UDID: $UDID"
-                DEST="id=$UDID"
-              else
-                echo "UDID not listed by xcodebuild for this workspace/scheme. Falling back to platform-based destination."
-                DEST="$DEFAULT_DEST"
-              fi
-            else
-              if xcodebuild -project "${PROJ}" -scheme "$SCHEME" -showdestinations 2>/dev/null | grep -q "$UDID"; then
-                echo "Using booted simulator UDID: $UDID"
-                DEST="id=$UDID"
-              else
-                echo "UDID not listed by xcodebuild for this project/scheme. Falling back to platform-based destination."
-                DEST="$DEFAULT_DEST"
-              fi
-            fi
+            echo "Preferring booted simulator UDID: $UDID"
+            DEST="id=$UDID"
           else
-            echo "No UDID provided by simulator action. Using platform-based destination."
+            echo "No UDID provided by simulator action. Using generic iOS Simulator destination."
             DEST="$DEFAULT_DEST"
           fi
 
